--- a/code/images/index.html
+++ b/code/images/index.html
@@ -7,16 +7,16 @@
     <body>
         <header class="navigation">
             <div class= "inline-block logo">
-                <img src="/code/images/Logo.png">
-                </div>
-                <nav class="inline-block">
+                <img src="../images/Logo.png">  
+             <nav class="inline-block">
                     <ul>
-                        <li class="inline-block">about</li>
-                        <li class="inline-block">skills</li>
-                        <li class="inline-block">work</li>
-                        <li class="inline-block">contact</li>
+                    <li class="inline-block">about</li>
+                    <li class="inline-block">skills</li>
+                    <li class="inline-block">work</li>
+                    <li class="inline-block">contact</li>
                     </ul>
                 </nav>
+              </div>   
         </header>
         <section class="heroImg">
             <div class="content">
@@ -24,6 +24,13 @@
                 <p>My name is Erick, a UX Designer based in Chicago, working at the intersection of social research and design. Together, accessible and impactful designs bring us closer together.</p>
                 <button>Download Resume</button>
             </div>
+        </section>
+        <section class="projectCard">
+            <h2 class="projectNum">O1</h1>
+            <h1 class="projectTitle">UX Foundations
+                Mobile Design</h1>
+            <p>A case study in mobile app design that uses UX foundational skills to complete the design process and develop a new mobile app.</p>
+            <button>view project</button>
         </section>
         <footer>
             <ul>
