--- a/code/images/index.html
+++ b/code/images/index.html
@@ -7,7 +7,8 @@
     <body>
         <header class="navigation">
             <div class= "inline-block logo">
-                <img src="../images/Logo.png">  
+                <img id="navLogo" src="../images/Logo.png">
+            </div>  
              <nav class="inline-block">
                     <ul>
                     <li class="inline-block">about</li>
@@ -16,7 +17,7 @@
                     <li class="inline-block">contact</li>
                     </ul>
                 </nav>
-              </div>   
+                 
         </header>
         <section class="heroImg">
             <div class="content">
