--- a/code/images/index.html
+++ b/code/images/index.html
@@ -2,7 +2,10 @@
 <html>
     <head>
         <title></title>
-        <link rel="stylesheet" href="/code/css/index.css">
+        <link rel="stylesheet" href="/code/css/index.css" >
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="navigation">
@@ -26,12 +29,31 @@
                 <button>Download Resume</button>
             </div>
         </section>
-        <section class="projectCard">
-            <h2 class="projectNum">O1</h1>
-            <h1 class="projectTitle">UX Foundations
-                Mobile Design</h1>
-            <p>A case study in mobile app design that uses UX foundational skills to complete the design process and develop a new mobile app.</p>
+        <section class="projectCards">
+            <div id="p01" class="projectCardGrid">
+                <h2 class="projectNum">O1</h1>
+                 <h1 class="projectTitle">Tandem: Mobile App Design</h1>
+                 <p>A case study in mobile app design that uses UX foundational skills to complete the design process and develop a new mobile app.</p>
             <button>view project</button>
+            </div>
+            <div id="p02" class="projectCardGrid">
+                <h2 class="projectNum">O2</h1>
+                 <h1 class="projectTitle">RWD: Government Website Redesign</h1>
+                 <p>A redesign of Canada's department of agriculture website through responsive web design.</p>
+            <button>view project</button>
+            </div>
+            <div id="p03" class="projectCardGrid">
+                <h2 class="projectNum">O3</h1>
+                 <h1 class="projectTitle">RWD: Nonprofit Website Redesign</h1>
+                 <p>A redesign of the Chicago Pet Rescue (CPR) website, focusing primarily on presenting an updated design and improving the adoption application process.</p>
+            <button>view project</button>
+            </div>
+            <div id="p04" class="projectCardGrid">
+                <h2 class="projectNum">O4</h1>
+                 <h1 class="projectTitle">UX Foundations Mobile Design</h1>
+                 <p>An exploration of UX foundational concepts through a case study in mobile design.</p>
+            <button>view project</button>
+            </div>
         </section>
         <footer>
             <ul>
