--- a/code/images/index.html
+++ b/code/images/index.html
@@ -24,7 +24,7 @@
         <section class="heroImg">
             <div class="content">
                 <img src="">
-                <p class="bio">My name is Erick, a UX Designer based in Chicago, working at the intersection of social research and design. Together, accessible and impactful designs bring us closer together.</p>
+                <p id="bio">My name is Erick, a UX Designer based in Chicago, working at the intersection of social research and design. Together, accessible and impactful designs bring us closer together.</p>
                 <button>Download Resume</button>
             </div>
         </section>
