--- a/code/images/index.html
+++ b/code/images/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="navigation">
         <div class= "inline-block logo">
-            <img id="navLogo" src="../images/Logo.png">
+            <img id="navLogo" src="../css/cardImages/Logo.png">
        </div>  
          <nav class="inline-block">
             <ul>
@@ -23,7 +23,7 @@
     </header>
         <section class="heroImg">
             <div class="content">
-                <img src="">
+                <img id="welcome" src="../css/cardImages/image 1.png">
                 <p id="bio">My name is Erick, a UX Designer based in Chicago, working at the intersection of social research and design. Together, accessible and impactful designs bring us closer together.</p>
                 <button>Download Resume</button>
             </div>
