--- a/code/images/index.html
+++ b/code/images/index.html
@@ -28,39 +28,31 @@
                 <button>Download Resume</button>
             </div>
         </section>
-    <section class="projectCards">
-            <div id="p01"> 
-                <div class="projectCardGrid projectInfo">
-                <h2 class="projectTitle projectInfo">O1</h1>
-                 <h1 class="projectTitle projectInfo">Tandem: Mobile App Design</h1>
-                 <p class="projectInfo">A case study in mobile app design that uses UX foundational skills to complete the design process and develop a new mobile app.</p>
-            <button>view project</button>
-           </div>
-         </div>
-            <div id="p02"> 
-                <div class="projectCardGrid">
-                <h2 class="projectTitle projectInfo">O2</h1>
-                 <h1 class="projectTitle projectInfo">RWD: Government Website Redesign</h1>
-                 <p class="projectInfo">A redesign of Canada's department of agriculture website through responsive web design.</p>
+        <section class="projectCards">
+            <div id="01" class="projectCardGrid">
+                <h2 class="projectNum">O1</h1>
+                 <h1 class="projectTitle">Tandem: Mobile App Design</h1>
+                 <p>A case study in mobile app design that uses UX foundational skills to complete the design process and develop a new mobile app.</p>
             <button>view project</button>
             </div>
-        </div>
-            <div id="p03"> 
-                <div class="projectCardGrid projectInfo">
-                <h2 class="projectTitle projectInfo">O3</h1>
-                 <h1 class="projectTitle projectInfo">RWD: Nonprofit Website Redesign</h1>
-                 <p class="projectInfo">A redesign of the Chicago Pet Rescue (CPR) website, focusing primarily on presenting an updated design and improving the adoption application process.</p>
+            <div id="02" class="projectCardGrid">
+                <h2 class="projectNum">O2</h1>
+                 <h1 class="projectTitle">RWD: Government Website Redesign</h1>
+                 <p>A redesign of Canada's department of agriculture website through responsive web design.</p>
             <button>view project</button>
             </div>
-        </div>
-            <div id="p04">
-                 <div class="projectCardGrid projectInfo">
-                <h2 class="projectTitle projectInfo">O4</h1>
-                 <h1 class="projectTitle projectInfo">UX Foundations Mobile Design</h1>
-                 <p class="projectInfo">An exploration of UX foundational concepts through a case study in mobile design.</p>
+            <div id="03" class="projectCardGrid">
+                <h2 class="projectNum">O3</h1>
+                 <h1 class="projectTitle">RWD: Nonprofit Website Redesign</h1>
+                 <p>A redesign of the Chicago Pet Rescue (CPR) website, focusing primarily on presenting an updated design and improving the adoption application process.</p>
             <button>view project</button>
             </div>
-        </div>
+            <div id="04" class="projectCardGrid">
+                <h2 class="projectNum">O4</h1>
+                 <h1 class="projectTitle">UX Foundations Mobile Design</h1>
+                 <p>An exploration of UX foundational concepts through a case study in mobile design.</p>
+            <button>view project</button>
+            </div>
         </section>
         <footer>
             <ul>
